[gd_scene load_steps=15 format=3 uid="uid://dpm1ux607ou7j"]

[ext_resource type="Script" path="res://locations/minigames/nodes/dino_run/dino_run.gd" id="1_s0npo"]
[ext_resource type="PackedScene" uid="uid://dtqvovtctndtl" path="res://ui/camera/camera.tscn" id="2_iu5yp"]
[ext_resource type="Theme" uid="uid://fk4bfu837bvc" path="res://materials/ui/theme.tres" id="2_t0afc"]
[ext_resource type="PackedScene" uid="uid://db2acwdainnwl" path="res://locations/minigames/nodes/dino_run/nodes/character/dino_character.tscn" id="3_avw1s"]
[ext_resource type="TileSet" uid="uid://cb1yo3x0yrdei" path="res://locations/minigames/nodes/dino_run/materials/dino_run_tilemap.tres" id="3_q41u7"]
[ext_resource type="Texture2D" uid="uid://dvw0vdgmqnx40" path="res://locations/minigames/nodes/dino_run/sprites/platformer.png" id="5_qqmo2"]
[ext_resource type="Material" uid="uid://de0kp0bflu8l6" path="res://materials/camera/filter_shader_material_day.tres" id="6_2nxuf"]
[ext_resource type="PackedScene" uid="uid://cyoyhp2mg6wv1" path="res://ui/hud/selectors/pet/pet_selector.tscn" id="7_b4jcs"]

[sub_resource type="Gradient" id="Gradient_f65wp"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.764706, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mtc5f"]
gradient = SubResource("Gradient_f65wp")

[sub_resource type="CircleShape2D" id="CircleShape2D_a4kyg"]
radius = 24.0832

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8e8p"]
size = Vector2(46.5729, 190.043)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sl206"]
bg_color = Color(0.915112, 0.78171, 0.581963, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mq3pt"]
bg_color = Color(0, 0, 0, 0.811765)

[node name="DinoRun" type="Node2D"]
script = ExtResource("1_s0npo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-899.44, -667.509)
scale = Vector2(12.7998, 1969.59)
texture = SubResource("GradientTexture1D_mtc5f")

[node name="CloudParallax2D" type="Parallax2D" parent="."]
scroll_offset = Vector2(-532.565, -908.717)
repeat_size = Vector2(2000, 0)
autoscroll = Vector2(-100, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(36.5863, -137.074)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2
region_rect = Rect2(0, 0, 75, 75)

[node name="Sprite2D2" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-77.4486, -211.91)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D3" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-184.357, -129.947)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D4" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-465.881, -204.782)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D5" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-629.806, -97.8744)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D6" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-722.459, -147.765)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D7" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-1331.83, -176.274)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="Sprite2D8" type="Sprite2D" parent="CloudParallax2D"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-1395.98, -133.51)
scale = Vector2(2.6, 2.6)
texture = ExtResource("5_qqmo2")
hframes = 16
vframes = 32
frame = 2

[node name="TreeParallax2D" type="Parallax2D" parent="."]
scroll_offset = Vector2(-532.565, -908.717)
repeat_size = Vector2(2000, 0)
autoscroll = Vector2(-100, 0)
repeat_times = 3

[node name="TileMap" type="TileMap" parent="TreeParallax2D"]
scale = Vector2(3, 3)
tile_set = ExtResource("3_q41u7")
format = 2
layer_0/tile_data = PackedInt32Array(196590, 458752, 6, 262126, 458752, 7, 327662, 458752, 8, 327663, 458752, 8, 262127, 458752, 6, 65527, 655360, 4, 131063, 655360, 5, 327671, 655360, 8, 65528, 720896, 4, 131064, 720896, 5, 196600, 720896, 6, 262136, 720896, 7, 327672, 720896, 8, 65529, 786432, 4, 131065, 786432, 5, 327673, 786432, 8, 393212, 655360, 8, 262141, 458752, 6, 327677, 458752, 7, 393213, 458752, 8, 393214, 786432, 8, -65540, 655360, 4, -4, 655360, 5, -65539, 720896, 4, -3, 720896, 5, -65538, 786432, 4, -2, 786432, 5, 65533, 720896, 6, 131069, 720896, 6, 196605, 720896, 6, -262128, 655360, 5, -262127, 720896, 5, -196591, 720896, 6, -131055, 720896, 6, -65519, 720896, 6, 17, 720896, 6, 65553, 720896, 6, 131089, 720896, 6, 196625, 720896, 7, 262161, 720896, 8, -262126, 786432, 5, 65554, 655360, 5, 65555, 720896, 5, 131091, 720896, 6, 196627, 720896, 7, 262163, 720896, 8, 65556, 786432, 5, -327664, 655360, 4, 262160, 655360, 8, -327663, 720896, 4, -327662, 786432, 4, 18, 655360, 4, 262162, 655360, 8, 19, 720896, 4, 20, 786432, 4, 262164, 786432, 8, 196609, 655360, 5, 196610, 720896, 5, 262146, 720896, 6, 327682, 720896, 7, 393218, 720896, 8, 196611, 786432, 5, 131073, 655360, 4, 393217, 655360, 8, 131074, 720896, 4, 131075, 786432, 4, 393219, 786432, 8, 262169, 655360, 8, 131098, 720896, 6, 196634, 720896, 7, 262170, 720896, 8, 262171, 786432, 8, 65687, 720896, 6, -65385, 720896, 5, 151, 720896, 6, -130922, 655360, 4, -65386, 655360, 5, -130921, 720896, 4, -130920, 786432, 4, -65384, 786432, 5, -261990, 655360, 4, -196454, 655360, 5, -261989, 720896, 4, -196453, 720896, 5, -261988, 786432, 4, -196452, 786432, 5, -130917, 720896, 6, -65381, 720896, 6, 155, 720896, 6, 65691, 720896, 6, 131227, 720896, 6, 196763, 720896, 7, 262298, 655360, 8, 262299, 720896, 8, 262300, 786432, 8, 262335, 655360, 8, 131264, 720896, 6, 196800, 720896, 7, 262336, 720896, 8, 262337, 786432, 8, 262340, 655360, 8, 131269, 720896, 6, 196805, 720896, 7, 262341, 720896, 8, 262342, 786432, 8, 262343, 655360, 8, 131272, 720896, 6, 196808, 720896, 7, 262344, 720896, 8, 262345, 786432, 8, 65728, 720896, 6, 192, 720896, 6, -65344, 720896, 6, -130880, 720896, 6, -196416, 720896, 5, 65733, 720896, 6, 197, 720896, 6, -65339, 720896, 6, -130875, 720896, 6, -196411, 720896, 6, -261947, 720896, 5, 65736, 720896, 6, 200, 720896, 6, -65336, 720896, 5, -130873, 655360, 4, -65337, 655360, 5, -130872, 720896, 4, -130871, 786432, 4, -65335, 786432, 5, -327484, 655360, 4, -261948, 655360, 5, -327483, 720896, 4, -327482, 786432, 4, -261946, 786432, 5, -261953, 655360, 4, -196417, 655360, 5, -261952, 720896, 4, -261951, 786432, 4, -196415, 786432, 5, 196604, 458752, 6, 262140, 458752, 7, 327676, 458752, 8, 131070, 458752, 6, 196606, 458752, 7, 262142, 458752, 8, 327678, 458752, 8, 262156, 458752, 8, 196620, 458752, 6, 262157, 458752, 6, 262181, 458752, 6, 196646, 458752, 6, 262183, 458752, 6, 262182, 458752, 7, 262206, 458752, 7, 196670, 458752, 6, 262205, 458752, 6, 262204, 458752, 6, 81, 458752, 6, 65616, 458752, 6, 131152, 458752, 7, 196688, 458752, 7, 262224, 458752, 8, 65617, 458752, 7, 131153, 458752, 8, 196689, 458752, 7, 262225, 458752, 8)

[node name="Camera2D" parent="." instance=ExtResource("2_iu5yp")]
position = Vector2(-974.959, -878.365)
zoom = Vector2(2, 2)
default_zoom = Vector2(2, 2)
min_zoom = 0.1
can_move = false
can_zoom = false
can_pan = false
metadata/_edit_group_ = true

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(-428.258, -716.704)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource("CircleShape2D_a4kyg")

[node name="DespawnArea" type="Area2D" parent="."]
position = Vector2(-1564.73, -663.279)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
position = Vector2(13.2864, -24.5732)
shape = SubResource("RectangleShape2D_y8e8p")

[node name="Dino" parent="." instance=ExtResource("3_avw1s")]
position = Vector2(-1063.38, -703.387)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("3_q41u7")
format = 2
layer_0/tile_data = PackedInt32Array(-852010, 262144, 1, -786474, 262144, 2, -720938, 262144, 2, -852009, 327680, 1, -786473, 327680, 2, -720937, 327680, 2, -852008, 327680, 1, -786472, 327680, 2, -720936, 327680, 2, -852007, 327680, 1, -786471, 327680, 2, -720935, 327680, 2, -852006, 327680, 1, -786470, 327680, 2, -720934, 327680, 2, -852005, 327680, 1, -786469, 327680, 2, -720933, 327680, 2, -852004, 327680, 1, -786468, 327680, 2, -720932, 327680, 2, -852003, 327680, 1, -786467, 327680, 2, -720931, 327680, 2, -852002, 327680, 1, -786466, 327680, 2, -720930, 327680, 2, -852001, 327680, 1, -786465, 327680, 2, -720929, 327680, 2, -852000, 327680, 1, -786464, 327680, 2, -720928, 327680, 2, -851999, 327680, 1, -786463, 327680, 2, -720927, 327680, 2, -851998, 327680, 1, -786462, 327680, 2, -720926, 327680, 2, -851997, 327680, 1, -786461, 327680, 2, -720925, 327680, 2, -851996, 327680, 1, -786460, 327680, 2, -720924, 327680, 2, -851995, 327680, 1, -786459, 327680, 2, -720923, 327680, 2, -851994, 327680, 1, -786458, 327680, 2, -720922, 327680, 2, -851993, 327680, 1, -786457, 327680, 2, -720921, 327680, 2, -851992, 327680, 1, -786456, 327680, 2, -720920, 327680, 2, -851991, 327680, 1, -786455, 327680, 2, -720919, 327680, 2, -851990, 327680, 1, -786454, 327680, 2, -720918, 327680, 2, -851989, 327680, 1, -786453, 327680, 2, -720917, 327680, 2, -851988, 327680, 1, -786452, 327680, 2, -720916, 327680, 2, -851987, 327680, 1, -786451, 327680, 2, -720915, 327680, 2, -851986, 327680, 1, -786450, 327680, 2, -720914, 327680, 2, -851985, 327680, 1, -786449, 327680, 2, -720913, 327680, 2, -851984, 327680, 1, -786448, 327680, 2, -720912, 327680, 2, -851983, 327680, 1, -786447, 327680, 2, -720911, 327680, 2, -851982, 327680, 1, -786446, 327680, 2, -720910, 327680, 2, -851981, 327680, 1, -786445, 327680, 2, -720909, 327680, 2, -851980, 327680, 1, -786444, 327680, 2, -720908, 327680, 2, -851979, 327680, 1, -786443, 327680, 2, -720907, 327680, 2, -851978, 327680, 1, -786442, 327680, 2, -720906, 327680, 2, -851977, 327680, 1, -786441, 327680, 2, -720905, 327680, 2, -851976, 327680, 1, -786440, 327680, 2, -720904, 327680, 2, -851975, 327680, 1, -786439, 327680, 2, -720903, 327680, 2, -851974, 327680, 1, -786438, 327680, 2, -720902, 327680, 2, -851973, 327680, 1, -786437, 327680, 2, -720901, 327680, 2, -851972, 327680, 1, -786436, 327680, 2, -720900, 327680, 2, -851971, 327680, 1, -786435, 327680, 2, -720899, 327680, 2, -851970, 327680, 1, -786434, 327680, 2, -720898, 327680, 2, -851969, 327680, 1, -786433, 327680, 2, -720897, 327680, 2, -917504, 327680, 1, -851968, 327680, 2, -786432, 327680, 2, -917503, 327680, 1, -851967, 327680, 2, -786431, 327680, 2, -917502, 393216, 1, -851966, 393216, 2, -786430, 393216, 2, -655402, 262144, 2, -589866, 262144, 2, -524330, 262144, 2, -655401, 327680, 2, -589865, 327680, 2, -524329, 327680, 2, -655400, 327680, 2, -589864, 327680, 2, -524328, 327680, 2, -655399, 327680, 2, -589863, 327680, 2, -524327, 327680, 2, -655398, 327680, 2, -589862, 327680, 2, -524326, 327680, 2, -655397, 327680, 2, -589861, 327680, 2, -524325, 327680, 2, -655396, 327680, 2, -589860, 327680, 2, -524324, 327680, 2, -655395, 327680, 2, -589859, 327680, 2, -524323, 327680, 2, -655394, 327680, 2, -589858, 327680, 2, -524322, 327680, 2, -655393, 327680, 2, -589857, 327680, 2, -524321, 327680, 2, -655392, 327680, 2, -589856, 327680, 2, -524320, 327680, 2, -655391, 327680, 2, -589855, 327680, 2, -524319, 327680, 2, -655390, 327680, 2, -589854, 327680, 2, -524318, 327680, 2, -655388, 327680, 2, -589852, 327680, 2, -524316, 327680, 2, -655387, 327680, 2, -589851, 327680, 2, -524315, 327680, 2, -655386, 327680, 2, -589850, 327680, 2, -524314, 327680, 2, -655385, 327680, 2, -589849, 327680, 2, -524313, 327680, 2, -655384, 327680, 2, -589848, 327680, 2, -524312, 327680, 2, -655383, 327680, 2, -589847, 327680, 2, -524311, 327680, 2, -655382, 327680, 2, -589846, 327680, 2, -524310, 327680, 2, -655381, 327680, 2, -589845, 327680, 2, -524309, 327680, 2, -655380, 327680, 2, -589844, 327680, 2, -524308, 327680, 2, -655379, 327680, 2, -589843, 327680, 2, -524307, 327680, 2, -655378, 327680, 2, -589842, 327680, 2, -524306, 327680, 2, -655377, 327680, 2, -589841, 327680, 2, -524305, 327680, 2, -655376, 327680, 2, -589840, 327680, 2, -524304, 327680, 2, -655375, 327680, 2, -589839, 327680, 2, -524303, 327680, 2, -655374, 327680, 2, -589838, 327680, 2, -524302, 327680, 2, -655373, 327680, 2, -589837, 327680, 2, -524301, 327680, 2, -655372, 327680, 2, -589836, 327680, 2, -524300, 327680, 2, -655371, 327680, 2, -589835, 327680, 2, -524299, 327680, 2, -655370, 327680, 2, -589834, 327680, 2, -524298, 327680, 2, -655369, 327680, 2, -589833, 327680, 2, -524297, 327680, 2, -655368, 327680, 2, -589832, 327680, 2, -524296, 327680, 2, -655367, 327680, 2, -589831, 327680, 2, -524295, 327680, 2, -655366, 327680, 2, -589830, 327680, 2, -524294, 327680, 2, -655365, 327680, 2, -589829, 327680, 2, -524293, 327680, 2, -655364, 327680, 2, -589828, 327680, 2, -524292, 327680, 2, -655363, 327680, 2, -589827, 327680, 2, -524291, 327680, 2, -655362, 327680, 2, -589826, 327680, 2, -524290, 327680, 2, -655361, 327680, 2, -589825, 327680, 2, -524289, 327680, 2, -720896, 327680, 2, -655360, 327680, 2, -589824, 327680, 2, -720895, 327680, 2, -655359, 327680, 2, -589823, 327680, 2, -720894, 393216, 2, -655358, 393216, 2, -589822, 393216, 2, -655389, 327680, 2, -589853, 327680, 2, -524317, 327680, 2, -42, 262144, 3, -41, 327680, 3, -40, 327680, 3, -39, 327680, 3, -38, 327680, 3, -37, 327680, 3, -36, 327680, 3, -35, 327680, 3, -34, 327680, 3, -33, 327680, 3, -32, 327680, 3, -31, 327680, 3, -30, 327680, 3, -29, 327680, 3, -28, 327680, 3, -27, 327680, 3, -26, 327680, 3, -25, 327680, 3, -24, 327680, 3, -23, 327680, 3, -22, 327680, 3, -21, 327680, 3, -20, 327680, 3, -19, 327680, 3, -18, 327680, 3, -17, 327680, 3, -16, 327680, 3, -15, 327680, 3, -14, 327680, 3, -13, 327680, 3, -12, 327680, 3, -11, 327680, 3, -10, 327680, 3, -9, 327680, 3, -8, 327680, 3, -7, 327680, 3, -6, 327680, 3, -5, 327680, 3, -4, 327680, 3, -3, 327680, 3, -2, 327680, 3, -1, 327680, 3, -65536, 327680, 3, -65535, 327680, 3, -65534, 393216, 3, -458794, 262144, 2, -393258, 262144, 2, -458793, 327680, 2, -393257, 327680, 2, -458792, 327680, 2, -393256, 327680, 2, -458791, 327680, 2, -393255, 327680, 2, -458790, 327680, 2, -393254, 327680, 2, -458789, 327680, 2, -393253, 327680, 2, -458788, 327680, 2, -393252, 327680, 2, -458787, 327680, 2, -393251, 327680, 2, -458786, 327680, 2, -393250, 327680, 2, -458785, 327680, 2, -393249, 327680, 2, -458784, 327680, 2, -393248, 327680, 2, -458783, 327680, 2, -393247, 327680, 2, -458782, 327680, 2, -393246, 327680, 2, -458781, 327680, 2, -393245, 327680, 2, -458780, 327680, 2, -393244, 327680, 2, -458779, 327680, 2, -393243, 327680, 2, -458778, 327680, 2, -393242, 327680, 2, -458777, 327680, 2, -393241, 327680, 2, -458776, 327680, 2, -393240, 327680, 2, -458775, 327680, 2, -393239, 327680, 2, -458774, 327680, 2, -393238, 327680, 2, -458773, 327680, 2, -393237, 327680, 2, -458772, 327680, 2, -393236, 327680, 2, -458771, 327680, 2, -393235, 327680, 2, -458770, 327680, 2, -393234, 327680, 2, -458769, 327680, 2, -393233, 327680, 2, -458768, 327680, 2, -393232, 327680, 2, -458767, 327680, 2, -393231, 327680, 2, -458766, 327680, 2, -393230, 327680, 2, -458765, 327680, 2, -393229, 327680, 2, -458764, 327680, 2, -393228, 327680, 2, -458763, 327680, 2, -393227, 327680, 2, -458762, 327680, 2, -393226, 327680, 2, -458761, 327680, 2, -393225, 327680, 2, -458760, 327680, 2, -393224, 327680, 2, -458759, 327680, 2, -393223, 327680, 2, -458758, 327680, 2, -393222, 327680, 2, -458757, 327680, 2, -393221, 327680, 2, -458756, 327680, 2, -393220, 327680, 2, -458755, 327680, 2, -393219, 327680, 2, -458754, 327680, 2, -393218, 327680, 2, -458753, 327680, 2, -393217, 327680, 2, -524288, 327680, 2, -458752, 327680, 2, -524287, 327680, 2, -458751, 327680, 2, -524286, 393216, 2, -458750, 393216, 2, -327722, 262144, 2, -262186, 262144, 2, -196650, 262144, 2, -131114, 262144, 2, -65578, 262144, 2, -327721, 327680, 2, -262185, 327680, 2, -196649, 327680, 2, -131113, 327680, 2, -65577, 327680, 2, -327720, 327680, 2, -262184, 327680, 2, -196648, 327680, 2, -131112, 327680, 2, -65576, 327680, 2, -327719, 327680, 2, -262183, 327680, 2, -196647, 327680, 2, -131111, 327680, 2, -65575, 327680, 2, -327718, 327680, 2, -262182, 327680, 2, -196646, 327680, 2, -131110, 327680, 2, -65574, 327680, 2, -327717, 327680, 2, -262181, 327680, 2, -196645, 327680, 2, -131109, 327680, 2, -65573, 327680, 2, -327716, 327680, 2, -262180, 327680, 2, -196644, 327680, 2, -131108, 327680, 2, -65572, 327680, 2, -327715, 327680, 2, -262179, 327680, 2, -196643, 327680, 2, -131107, 327680, 2, -65571, 327680, 2, -327714, 327680, 2, -262178, 327680, 2, -196642, 327680, 2, -131106, 327680, 2, -65570, 327680, 2, -327713, 327680, 2, -262177, 327680, 2, -196641, 327680, 2, -131105, 327680, 2, -65569, 327680, 2, -327712, 327680, 2, -262176, 327680, 2, -196640, 327680, 2, -131104, 327680, 2, -65568, 327680, 2, -327711, 327680, 2, -262175, 327680, 2, -196639, 327680, 2, -131103, 327680, 2, -65567, 327680, 2, -327710, 327680, 2, -262174, 327680, 2, -196638, 327680, 2, -131102, 327680, 2, -65566, 327680, 2, -327709, 327680, 2, -262173, 327680, 2, -196637, 327680, 2, -131101, 327680, 2, -65565, 327680, 2, -327708, 327680, 2, -262172, 327680, 2, -196636, 327680, 2, -131100, 327680, 2, -65564, 327680, 2, -327707, 327680, 2, -262171, 327680, 2, -196635, 327680, 2, -131099, 327680, 2, -65563, 327680, 2, -327706, 327680, 2, -262170, 327680, 2, -196634, 327680, 2, -131098, 327680, 2, -65562, 327680, 2, -327705, 327680, 2, -262169, 327680, 2, -196633, 327680, 2, -131097, 327680, 2, -65561, 327680, 2, -327704, 327680, 2, -262168, 327680, 2, -196632, 327680, 2, -131096, 327680, 2, -65560, 327680, 2, -327703, 327680, 2, -262167, 327680, 2, -196631, 327680, 2, -131095, 327680, 2, -65559, 327680, 2, -327702, 327680, 2, -262166, 327680, 2, -196630, 327680, 2, -131094, 327680, 2, -65558, 327680, 2, -327701, 327680, 2, -262165, 327680, 2, -196629, 327680, 2, -131093, 327680, 2, -65557, 327680, 2, -327700, 327680, 2, -262164, 327680, 2, -196628, 327680, 2, -131092, 327680, 2, -65556, 327680, 2, -327699, 327680, 2, -262163, 327680, 2, -196627, 327680, 2, -131091, 327680, 2, -65555, 327680, 2, -327698, 327680, 2, -262162, 327680, 2, -196626, 327680, 2, -131090, 327680, 2, -65554, 327680, 2, -327697, 327680, 2, -262161, 327680, 2, -196625, 327680, 2, -131089, 327680, 2, -65553, 327680, 2, -327696, 327680, 2, -262160, 327680, 2, -196624, 327680, 2, -131088, 327680, 2, -65552, 327680, 2, -327695, 327680, 2, -262159, 327680, 2, -196623, 327680, 2, -131087, 327680, 2, -65551, 327680, 2, -327694, 327680, 2, -262158, 327680, 2, -196622, 327680, 2, -131086, 327680, 2, -65550, 327680, 2, -327693, 327680, 2, -262157, 327680, 2, -196621, 327680, 2, -131085, 327680, 2, -65549, 327680, 2, -327692, 327680, 2, -262156, 327680, 2, -196620, 327680, 2, -131084, 327680, 2, -65548, 327680, 2, -327691, 327680, 2, -262155, 327680, 2, -196619, 327680, 2, -131083, 327680, 2, -65547, 327680, 2, -327690, 327680, 2, -262154, 327680, 2, -196618, 327680, 2, -131082, 327680, 2, -65546, 327680, 2, -327689, 327680, 2, -262153, 327680, 2, -196617, 327680, 2, -131081, 327680, 2, -65545, 327680, 2, -327688, 327680, 2, -262152, 327680, 2, -196616, 327680, 2, -131080, 327680, 2, -65544, 327680, 2, -327687, 327680, 2, -262151, 327680, 2, -196615, 327680, 2, -131079, 327680, 2, -65543, 327680, 2, -327686, 327680, 2, -262150, 327680, 2, -196614, 327680, 2, -131078, 327680, 2, -65542, 327680, 2, -327685, 327680, 2, -262149, 327680, 2, -196613, 327680, 2, -131077, 327680, 2, -65541, 327680, 2, -327684, 327680, 2, -262148, 327680, 2, -196612, 327680, 2, -131076, 327680, 2, -65540, 327680, 2, -327683, 327680, 2, -262147, 327680, 2, -196611, 327680, 2, -131075, 327680, 2, -65539, 327680, 2, -327682, 327680, 2, -262146, 327680, 2, -196610, 327680, 2, -131074, 327680, 2, -65538, 327680, 2, -327681, 327680, 2, -262145, 327680, 2, -196609, 327680, 2, -131073, 327680, 2, -65537, 327680, 2, -393216, 327680, 2, -327680, 327680, 2, -262144, 327680, 2, -196608, 327680, 2, -131072, 327680, 2, -393215, 327680, 2, -327679, 327680, 2, -262143, 327680, 2, -196607, 327680, 2, -131071, 327680, 2, -393214, 393216, 2, -327678, 393216, 2, -262142, 393216, 2, -196606, 393216, 2, -131070, 393216, 2)

[node name="ui" type="CanvasLayer" parent="."]

[node name="Filter" type="ColorRect" parent="ui"]
material = ExtResource("6_2nxuf")
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.061
offset_left = -4910.53
offset_top = -1682.98
offset_right = 2985.47
offset_bottom = 2694.75

[node name="RunScore" type="VBoxContainer" parent="ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 5.0
offset_right = -2.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ui/RunScore"]
layout_mode = 2
theme_override_constants/margin_top = 75

[node name="PanelContainer" type="PanelContainer" parent="ui/RunScore/MarginContainer"]
custom_minimum_size = Vector2(232, 62)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_sl206")

[node name="Score" type="Label" parent="ui/RunScore/MarginContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_t0afc")
theme_override_font_sizes/font_size = 65
text = "00000000"
horizontal_alignment = 1

[node name="Results" type="VBoxContainer" parent="ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ui/Results"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mq3pt")

[node name="MarginContainer" type="MarginContainer" parent="ui/Results/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 56
theme_override_constants/margin_bottom = 31

[node name="VBoxContainer" type="VBoxContainer" parent="ui/Results/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t0afc")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 111
text = "Results"
horizontal_alignment = 1

[node name="Score" type="HBoxContainer" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer/Score"]
custom_minimum_size = Vector2(107, 0)
layout_mode = 2
theme = ExtResource("2_t0afc")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "score:"
vertical_alignment = 1

[node name="Value" type="Label" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer/Score"]
layout_mode = 2
theme = ExtResource("2_t0afc")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0000000"

[node name="Buttons" type="HBoxContainer" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Retry" type="Button" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_t0afc")
text = "Retry"

[node name="Exit" type="Button" parent="ui/Results/PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("2_t0afc")
text = "Exit"

[node name="PetSelector" parent="ui" instance=ExtResource("7_b4jcs")]
